--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -11,6 +11,8 @@ composeBom = "2023.08.00"
 lifecycleViewmodelCompose="2.7.0"
 ksp = "1.9.23-1.0.20"
 room = "2.6.1"
+compose-navigation = "2.7.7"
+
 
 [libraries]
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
@@ -32,6 +34,7 @@ androidx-lifecycle-viewmodel-compose = { group = "androidx.lifecycle", name = "l
 androidx-room-runtime = { group = "androidx.room", name = "room-runtime", version.ref="room"}
 androidx-room-ktx = { group = "androidx.room", name = "room-ktx", version.ref="room"}
 androidx-room-compiler = { group = "androidx.room", name = "room-compiler", version.ref="room"}
+compose-navigation = {module = "androidx.navigation:navigation-compose", version.ref = "compose-navigation"}
 
 [plugins]
 androidApplication = { id = "com.android.application", version.ref = "agp" }
